workspace-sf/force-app/main/default/objects/SeguradoProposta__c/SeguradoProposta__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar os segurados da proposta</description>
    <label>Segurado da proposta</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Segurados da proposta</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>