workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/BairroComercial__c.field-meta.xml
<CustomField>
    <fullName>BairroComercial__c</fullName>
    <label>Bairro Comercial</label>
    <length>70</length>
    <type>Text</type>
</CustomField>