workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/bairroResidencial__c.field-meta.xml
<CustomField>
    <fullName>bairroResidencial__c</fullName>
    <label>Bairro Residencial</label>
    <length>50</length>
    <type>Text</type>
</CustomField>