workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/CargoPEP__c.field-meta.xml
<CustomField>
    <fullName>CargoPEP__c</fullName>
    <label>Cargo PEP</label>
    <length>80</length>
    <type>Text</type>
</CustomField>