workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/cepResidencial__c.field-meta.xml
<CustomField>
    <fullName>cepResidencial__c</fullName>
    <label>CEP Residencial</label>
    <length>10</length>
    <type>Text</type>
</CustomField>