workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/ComplementoComercial__c.field-meta.xml
<CustomField>
    <fullName>ComplementoComercial__c</fullName>
    <label>Complemento Comercial</label>
    <length>70</length>
    <type>Text</type>
</CustomField>