workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/ComplementoResidencial__c.field-meta.xml
<CustomField>
    <fullName>ComplementoResidencial__c</fullName>
    <label>Complemento Residencial</label>
    <length>70</length>
    <type>Text</type>
</CustomField>