workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/CpfPessoaRelacionamentoProximo__c.field-meta.xml
<CustomField>
    <fullName>CpfPessoaRelacionamentoProximo__c</fullName>
    <label>CPF da pessoa de relacionamento próximo</label>
    <length>14</length>
    <type>Text</type>
</CustomField>