workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/DataAtualizacaoPEP__c.field-meta.xml
<CustomField>
    <fullName>DataAtualizacaoPEP__c</fullName>
    <label>Data Atualização</label>
    <type>Date</type>
</CustomField>