workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/EmpresaTrabalhaSocio__c.field-meta.xml
<CustomField>
    <fullName>EmpresaTrabalhaSocio__c</fullName>
    <label>Empresa que trabalha ou é sócio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>