workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/Endereco_comercial__c.field-meta.xml
<CustomField>
    <fullName>Endereco_comercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Endereço comercial</label>
    <referenceTo>Endereco__c</referenceTo>
    <relationshipLabel>Segurados da proposta</relationshipLabel>
    <relationshipName>Segurados_da_proposta</relationshipName>
    <type>Lookup</type>
</CustomField>