workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/Endereco_de_recado__c.field-meta.xml
<CustomField>
    <fullName>Endereco_de_recado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Endereço de recado</label>
    <referenceTo>Endereco__c</referenceTo>
    <relationshipLabel>Segurados da proposta (Endereço de recado)</relationshipLabel>
    <relationshipName>Segurados_da_proposta2</relationshipName>
    <type>Lookup</type>
</CustomField>