workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/Endereco_residencial__c.field-meta.xml
<CustomField>
    <fullName>Endereco_residencial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Endereço residencial</label>
    <referenceTo>Endereco__c</referenceTo>
    <relationshipLabel>Segurados da proposta (Endereço residencial)</relationshipLabel>
    <relationshipName>Segurados_da_proposta1</relationshipName>
    <type>Lookup</type>
</CustomField>