workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/Endereco_veraneio__c.field-meta.xml
<CustomField>
    <fullName>Endereco_veraneio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Endereço veraneio</label>
    <referenceTo>Endereco__c</referenceTo>
    <relationshipLabel>Segurados da proposta (Endereço veraneio)</relationshipLabel>
    <relationshipName>Segurados_da_proposta3</relationshipName>
    <type>Lookup</type>
</CustomField>