workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/EnderecoBoleto__c.field-meta.xml
<CustomField>
    <fullName>EnderecoBoleto__c</fullName>
    <label>Endereço do Boleto</label>
    <type>Url</type>
</CustomField>