workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/FormaPagamento__c.field-meta.xml
<CustomField>
    <fullName>FormaPagamento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Forma de pagamento</label>
    <referenceTo>FormaPagamento__c</referenceTo>
    <relationshipLabel>Segurados da proposta</relationshipLabel>
    <relationshipName>SeguradosProposta</relationshipName>
    <type>Lookup</type>
</CustomField>