workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/Fumante__c.field-meta.xml
<CustomField>
    <fullName>Fumante__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fumante?</label>
    <type>Checkbox</type>
</CustomField>