workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/GrauParentesco__c.field-meta.xml
<CustomField>
    <fullName>GrauParentesco__c</fullName>
    <label>Grau de Parentesco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COMPANHEIRO</fullName>
            </value>
            <value>
                <fullName>CÔNJUGE</fullName>
            </value>
            <value>
                <fullName>ENTEADO</fullName>
            </value>
            <value>
                <fullName>FILHO</fullName>
            </value>
            <value>
                <fullName>PAIMAE</fullName>
                <label>PAI MAE</label>
            </value>
            <value>
                <fullName>OUTROS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>