workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/GrupoProposta__c.field-meta.xml
<CustomField>
    <fullName>GrupoProposta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupo da proposta</label>
    <referenceTo>GrupoProposta__c</referenceTo>
    <relationshipLabel>Segurados da proposta</relationshipLabel>
    <relationshipName>SeguradosProposta</relationshipName>
    <type>Lookup</type>
</CustomField>