workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/InformacaoBancaria__c.field-meta.xml
<CustomField>
    <fullName>InformacaoBancaria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Informação bancária</label>
    <referenceTo>InformacaoBancaria__c</referenceTo>
    <relationshipLabel>Segurados da proposta</relationshipLabel>
    <relationshipName>SeguradosProposta</relationshipName>
    <type>Lookup</type>
</CustomField>