workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/IntegracaoPEP__c.field-meta.xml
<CustomField>
    <fullName>IntegracaoPEP__c</fullName>
    <label>Integração PEP</label>
    <length>80</length>
    <type>Text</type>
</CustomField>