workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/IPCA__c.field-meta.xml
<CustomField>
    <fullName>IPCA__c</fullName>
    <label>IPCA</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>