workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/Melhor_periodo_para_contato__c.field-meta.xml
<CustomField>
    <fullName>Melhor_periodo_para_contato__c</fullName>
    <label>Melhor periodo para contato</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
                <label>Manhã</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>Tarde</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>Noite</label>
            </value>
            <value>
                <fullName>I</fullName>
                <default>true</default>
                <label>Indiferente</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>