workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/Nome_Da_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Nome_Da_Empresa__c</fullName>
    <description>OBSOLETO -- USAR EmpresaTrabalhoSocio</description>
    <formula>Conta__r.EmpresaTrabalhaSocio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome Da Empresa</label>
    <type>Text</type>
</CustomField>