workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/NomeContatoEmergencia__c.field-meta.xml
<CustomField>
    <fullName>NomeContatoEmergencia__c</fullName>
    <label>Nome do contato de emergência</label>
    <length>255</length>
    <type>Text</type>
</CustomField>