workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/NumeroComercial__c.field-meta.xml
<CustomField>
    <fullName>NumeroComercial__c</fullName>
    <label>Número Comercial</label>
    <length>50</length>
    <type>Text</type>
</CustomField>