workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/numeroResidencial__c.field-meta.xml
<CustomField>
    <fullName>numeroResidencial__c</fullName>
    <label>Número residencial</label>
    <length>50</length>
    <type>Text</type>
</CustomField>