workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/Pais_Residente__c.field-meta.xml
<CustomField>
    <fullName>Pais_Residente__c</fullName>
    <label>País Residente</label>
    <length>40</length>
    <type>Text</type>
</CustomField>