workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/PaisDeOrigem__c.field-meta.xml
<CustomField>
    <fullName>PaisDeOrigem__c</fullName>
    <label>País de Nacionalidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pais</valueSetName>
    </valueSet>
</CustomField>