workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/paisResidencial__c.field-meta.xml
<CustomField>
    <fullName>paisResidencial__c</fullName>
    <label>País Residencial</label>
    <length>50</length>
    <type>Text</type>
</CustomField>