workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/PorcentagemParticipacaoVida__c.field-meta.xml
<CustomField>
    <fullName>PorcentagemParticipacaoVida__c</fullName>
    <label>Porcentagem de participação da Vida</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>