workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/PremioComercial__c.field-meta.xml
<CustomField>
    <fullName>PremioComercial__c</fullName>
    <label>Prêmio comercial</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>