workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/PremioIntegral__c.field-meta.xml
<CustomField>
    <fullName>PremioIntegral__c</fullName>
    <label>Prêmio Integral</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>