workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/PremioParcela__c.field-meta.xml
<CustomField>
    <fullName>PremioParcela__c</fullName>
    <label>Prêmio da parcela</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>