workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/Profissao__c.field-meta.xml
<CustomField>
    <fullName>Profissao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profissão</label>
    <referenceTo>Profissao__c</referenceTo>
    <relationshipLabel>Segurados da proposta</relationshipLabel>
    <relationshipName>Segurados_da_proposta</relationshipName>
    <type>Lookup</type>
</CustomField>