workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/PronomePessoal_do_Segurado__c.field-meta.xml
<CustomField>
    <fullName>PronomePessoal_do_Segurado__c</fullName>
    <description>Designação de tratamento para a pessoa</description>
    <label>Pronome Pessoal do Segurado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ela</fullName>
            </value>
            <value>
                <fullName>Ele</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>