workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/qtdFuncionarios__c.field-meta.xml
<CustomField>
    <fullName>qtdFuncionarios__c</fullName>
    <label>Quantidade de Funcionários</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>