workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/Ramo_de_atividade__c.field-meta.xml
<CustomField>
    <fullName>Ramo_de_atividade__c</fullName>
    <description>OBSOLETO - usar RamoAtividade</description>
    <formula>Conta__r.Ramo_de_atividade__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ramo de atividade</label>
    <type>Text</type>
</CustomField>