workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/RamoAtividade__c.field-meta.xml
<CustomField>
    <fullName>RamoAtividade__c</fullName>
    <label>Ramo  de  Atividade</label>
    <length>80</length>
    <type>Text</type>
</CustomField>