workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/Renda__c.field-meta.xml
<CustomField>
    <fullName>Renda__c</fullName>
    <label>Renda</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>