workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/Reside_no_Brasil__c.field-meta.xml
<CustomField>
    <fullName>Reside_no_Brasil__c</fullName>
    <formula>IF( CONTAINS(LOWER(Pais_Residente__c), &apos;brasil&apos;)  , &apos;Sim&apos;, &apos;Não&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reside no Brasil</label>
    <type>Text</type>
</CustomField>