workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/ResponsavelFinanceiroSeguro__c.field-meta.xml
<CustomField>
    <fullName>ResponsavelFinanceiroSeguro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>É o responsável financeiro pelo seguro?</label>
    <type>Checkbox</type>
</CustomField>