workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/TaxaTotal__c.field-meta.xml
<CustomField>
    <fullName>TaxaTotal__c</fullName>
    <label>Taxa total</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>