workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/Telefone_comercial__c.field-meta.xml
<CustomField>
    <fullName>Telefone_comercial__c</fullName>
    <label>Telefone comercial</label>
    <type>Phone</type>
</CustomField>