workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/Telefone_residencial__c.field-meta.xml
<CustomField>
    <fullName>Telefone_residencial__c</fullName>
    <label>Telefone residencial</label>
    <type>Phone</type>
</CustomField>