workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/TipoCusteio__c.field-meta.xml
<CustomField>
    <fullName>TipoCusteio__c</fullName>
    <label>Tipo de custeio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contributário</fullName>
            </value>
            <value>
                <fullName>Não Contributário</fullName>
            </value>
            <value>
                <fullName>Parcialmente Contributário</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>