workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/tipoEmpresa__c.field-meta.xml
<CustomField>
    <fullName>tipoEmpresa__c</fullName>
    <label>Tipo de Empresa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>