workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/TipoPessoaRelacionamentoProximo__c.field-meta.xml
<CustomField>
    <fullName>TipoPessoaRelacionamentoProximo__c</fullName>
    <label>Tipo de pessoa de relacionamento próximo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PessoaFisica</fullName>
                <label>Pessoa Física</label>
            </value>
            <value>
                <fullName>PessoaJuridica</fullName>
                <label>Pessoa Jurídica</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>