workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/UFComercial__c.field-meta.xml
<CustomField>
    <fullName>UFComercial__c</fullName>
    <label>UF Comercial</label>
    <length>2</length>
    <type>Text</type>
</CustomField>