workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/UFResidencial__c.field-meta.xml
<CustomField>
    <fullName>UFResidencial__c</fullName>
    <label>UF Residencial</label>
    <length>2</length>
    <type>Text</type>
</CustomField>