workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/VigenciaFinal__c.field-meta.xml
<CustomField>
    <fullName>VigenciaFinal__c</fullName>
    <label>Vigência final</label>
    <type>Date</type>
</CustomField>