workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/VigenciaInicial__c.field-meta.xml
<CustomField>
    <fullName>VigenciaInicial__c</fullName>
    <label>Vigência inicial</label>
    <type>Date</type>
</CustomField>