workspace-sf/force-app/main/default/objects/SeguradoProposta__c/fields/VinculoComSegurado__c.field-meta.xml
<CustomField>
    <fullName>VinculoComSegurado__c</fullName>
    <label>Vinculo com o segurado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>