workspace-sf/force-app/main/default/objects/SeguradoProposta__c/validationRules/AlteracaoRenovacaoFumanteProfissao.validationRule-meta.xml
<ValidationRule>
    <fullName>AlteracaoRenovacaoFumanteProfissao</fullName>
    <active>true</active>
    <description>Impedir a alteração dos campos Fumante e Profissão em Propostas de Renovação</description>
    <errorConditionFormula>( ISCHANGED(Fumante__c) || ISCHANGED(Profissao__c) )  
  &amp;&amp;  
 ISPICKVAL(GrupoProposta__r.ContratanteProposta__r.Proposta__r.Tipo__c, &quot;Renovação&quot; )
  &amp;&amp;
( ($Profile.Name &lt;&gt; &quot;Administrador Porto&quot;)   
     &amp;&amp;
  ($Profile.Name &lt;&gt; &quot;System Administrator&quot;)  
     &amp;&amp;
  ($Profile.Name &lt;&gt; &quot;Administrador do sistema&quot;)  
     &amp;&amp;
  ($Profile.Name &lt;&gt; &quot;Processos e Projetos&quot;) )</errorConditionFormula>
    <errorMessage>Edição de Campos e adição de novos dados não são permitidos para Proposta do Tipo Renovação para o seu Perfil</errorMessage>
</ValidationRule>